--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Backender`s Calc</title>
+    <link
+      rel="shortcut icon"
+      href="https://cdn4.iconfinder.com/data/icons/doodle-4/164/calculator-256.png"
+      type="image/x-icon"
+    />
   </head>
   <body>
     <input type="number" id="firstInput" placeholder="First Number" />
